@@ -5,17 +5,15 @@ import com.example.buensaboruno.domain.enums.Estado;
 import com.example.buensaboruno.services.ExcelService;
 import com.example.buensaboruno.servicesImpl.PedidoServiceImpl;
 import jakarta.validation.Valid;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.InputStreamResource;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.io.ByteArrayInputStream;
-import java.io.IOException;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/pedidos")
@@ -24,6 +22,8 @@ public class PedidoController {
     private final PedidoServiceImpl service;
     private final ExcelService excelService;
 
+
+    @Autowired
     public PedidoController(PedidoServiceImpl service, ExcelService excelService) {
         this.service = service;
         this.excelService = excelService;
@@ -117,28 +117,22 @@ public class PedidoController {
         }
     }
 
-    // Nuevo endpoint para exportar pedidos a Excel
+    // Endpoint para exportar pedidos filtrados a Excel
     @GetMapping("/export/excel")
-    public ResponseEntity<InputStreamResource> exportPedidosToExcel(
-            @RequestParam String fechaInicio,
-            @RequestParam String fechaFin,
-            @RequestParam(required = false) String estado) {
+    public ResponseEntity<?> exportPedidosToExcel(@RequestParam("fechaInicio") LocalDate fechaInicio, @RequestParam("fechaFin") LocalDate fechaFin, @RequestParam(value = "estado", required = false) String estado) {
         try {
-            List<Pedido> pedidos = service.findPedidosByFecha(LocalDate.parse(fechaInicio), LocalDate.parse(fechaFin));
+            List<Pedido> pedidos = service.findPedidosByFecha(fechaInicio, fechaFin);
             if (estado != null && !estado.isEmpty()) {
-                Estado estadoEnum = Estado.valueOf(estado);
                 pedidos = pedidos.stream()
-                        .filter(p -> p.getEstado() == estadoEnum)
-                        .collect(Collectors.toList());
+                        .filter(p -> p.getEstado().name().equalsIgnoreCase(estado))
+                        .toList();
             }
-            ByteArrayInputStream in = excelService.generarReportePedidos(pedidos);
-
-            HttpHeaders headers = new HttpHeaders();
-            headers.add("Content-Disposition", "attachment; filename=pedidos.xlsx");
-
-            return ResponseEntity.ok().headers(headers).body(new InputStreamResource(in));
-        } catch (IOException e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+            ByteArrayInputStream excelStream = excelService.generarReportePedidos(pedidos);
+            return ResponseEntity.ok()
+                    .header("Content-Disposition", "attachment; filename=pedidos.xlsx")
+                    .body(new InputStreamResource(excelStream));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("{\"error\":\"Error al exportar los pedidos a Excel. Por favor intente luego\"}");
         }
     }
 }
